<?xml version="1.0" encoding="utf-8"?>
<GridLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:columnCount="2">

	<ToggleButton
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/ToggleCheckOptBlockBadware"/>
	<CheckBox
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/CheckOptBlockBadware"
		android:text="@string/LabelBlockBadware"/>

	<ToggleButton
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/ToggleCheckOptSuppressBanners"/>
	<CheckBox
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/CheckOptSuppressBanners"
		android:text="@string/LabelSuppressBanners"/>

	<ToggleButton
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/ToggleCheckOptAllowJs"/>
	<CheckBox
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/CheckOptAllowJs"
		android:text="@string/LabelAllowJs"/>
	
	<ToggleButton
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/ToggleCheckOptAllowCss"/>
	<CheckBox
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/CheckOptAllowCss"
		android:text="@string/LabelAllowCss"/>
	
	<ToggleButton
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/ToggleCheckOptDevtools"/>
	<CheckBox
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/CheckOptDevtools"
		android:text="@string/LabelDevtools"/>
	
</GridLayout>

